src/test/ui/suggestions/return-closures.stderr
error[E0308]: mismatched types
  --> $DIR/return-closures.rs:2:5
   |
LL | fn foo() {
   |          - help: try adding a return type: `-> impl for<'r> Fn(&'r i32) -> i32`
LL |     |x: &i32| 1i32
   |     ^^^^^^^^^^^^^^ expected `()`, found closure
   |
   = note: expected unit type `()`
                found closure `[closure@$DIR/return-closures.rs:2:5: 2:14]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
