src/test/ui/suggestions/return-closures.rs
fn foo() {
    |x: &i32| 1i32
    //~^ ERROR mismatched types
}

fn main() {}
